[package]
name = "cloudflare-workers-example"
version = "0.1.0"
authors = ["ww24"]
edition = "2021"
description = "Cloudflare Workers Example"
repository = "https://github.com/ww24/cloudflare-workers-example"
license = ""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.10"
serde_json = "1.0.67"
console_error_panic_hook = { version = "0.1.1", optional = true }
serde = {version = "1.0", features = ["derive"] }
jwt-simple = "0.11.0"
getrandom = {version = "0.2.7", features = ["js"]}
once_cell = "1.13.0"

[profile.release]
opt-level = "s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
